# doxidize

./: Cargo.toml
src/: config.rs
src/ops/: build.rs
templates/html/: base.hbs
templates/html/partials/: script.hbs  sidebar.hbs  style.hbs
