[package]
name = "doxidize"
version = "0.1.0"
authors = ["steveklabnik <steve@steveklabnik.com>"]
license = "MIT/Apache-2.0"
description = "none for now"

[dependencies]
comrak = "0.2.14"
configure = "0.1.1"
configure_derive = "0.1.1"
ctrlc = "3.1.1"
failure = "0.1.2"
failure_derive = "0.1.2"
handlebars = "1.0.0"
notify = "4.0.3"
remove_dir_all = "0.5"
rls-analysis = "0.16"
rls-data = { version = "0.18", features = ["serialize-serde"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
slog-async = "2.3.0"
slog-term = "2.4.0"
slugify = "0.1.0"
structopt = "0.2"
structopt-derive = "0.2"
toml_edit = "0.1.3"
walkdir = "2.1.4"

[dependencies.slog]
version = "2.3"
# uncomment this if you'd like to read trace-level messages
# features = ["max_level_trace"]

[dependencies.simple-server]
git = "https://github.com/steveklabnik/simple-server"

[dev-dependencies]
tempdir = "0.3"
